tests/baselines/reference/MemberFunctionDeclaration2_es6.errors.txt
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration2_es6.ts(2,11): error TS9001: Generators are not currently supported.


==== tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration2_es6.ts (1 errors) ====
    class C {
       public * foo() { }
              ~
!!! error TS9001: Generators are not currently supported.
    }